fixed a double jump bug

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -8,6 +8,6 @@ $light-red: lighten($red, 25%);
 $blue: #4782b2;
 $beige: #f2f0ed;
 $brown: #30261d;
-$yellow: #e7ed36;
+$yellow: #f6fc4b;
 $primary-font: 'Roboto', sans-serif;
 $secondary-font:'Cormorant Garamond', serif;
